# meteora-lp-agent

./: .env.example  .gitignore  CLAUDE-CODE-PROMPTS.md  CLAUDE.md  agent_loop.py  live_watcher.py  lp_intelligence.py  prepare.py  program.md  pyproject.toml  results.tsv  run.bat  simulate.py
backups/: strategy_20260324_112931.py  strategy_20260324_112944.py  strategy_20260324_113013.py  strategy_20260324_113043.py  strategy_20260324_113113.py  strategy_20260324_113220.py  strategy_20260324_113258.py  strategy_20260324_113353.py  strategy_20260324_113414.py  strategy_20260324_113453.py  strategy_20260324_113736.py  strategy_20260324_113849.py  strategy_20260324_113935.py  strategy_20260324_114048.py  strategy_20260324_114248.py  strategy_20260324_114716.py  strategy_20260324_115110.py  strategy_20260324_115307.py  strategy_20260324_115422.py  strategy_20260324_115557.py  strategy_20260324_115737.py  strategy_20260324_120152.py  strategy_20260324_132841.py  strategy_20260324_132907.py  strategy_20260324_133331.py  strategy_20260324_133738.py  strategy_20260324_133959.py  strategy_20260324_134329.py  strategy_20260324_135653.py  strategy_20260324_143949.py  strategy_20260324_144804.py  strategy_20260324_150417.py  strategy_20260324_151803.py  strategy_20260324_152312.py  strategy_20260324_152339.py  strategy_20260324_152703.py
cache/live/: latest_patterns.json
src/common/: config.py  logger.py
src/data/: dune.py  feeds.py  store.py
src/meteora/: __init__.py  client.py  types.py
src/scoring/: factors.py  (+4 more)
tests/: test_scoring.py  test_simulation.py  test_strategy.py
(+105 files in other folders)
